...
        android:text="@string/kinrecovery_create_password_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_password_title"/>

    <kin.backupandrestore.widget.PasswordEditText
        android:id="@+id/enter_pass_edittext"
        android:layout_width="@dimen/kinrecovery_btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kinrecovery_margin_large"
        app:kinrecovery_hint="@string/kinrecovery_enter_password"
        app:kinrecovery_show_reveal_icon="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_description"/>

    <kin.backupandrestore.widget.PasswordEditText
        android:id="@+id/confirm_pass_edittext"
        android:layout_width="@dimen/kinrecovery_btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kinrecovery_edittext_margin"
        app:kinrecovery_hint="@string/kinrecovery_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_pass_edittext"/>

    <CheckBox
        android:id="@+id/understand_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kinrecovery_margin_medium"
        android:textColorHighlight="@color/kinrecovery_bluePrimary"
        android:gravity="top"
        android:theme="@style/KinrecoveryCheckBox"
...
        android:layout_marginTop="@dimen/kinrecovery_text_align_top_checkbox_margin"
        android:text="@string/kinrecovery_i_understand_password_description"
        app:layout_constraintStart_toEndOf="@id/understand_checkbox"
        app:layout_constraintTop_toTopOf="@id/understand_checkbox"/>

    <Button
        android:id="@+id/next_button"
        style="@style/KinrecoveryTitleLarge"
        android:layout_width="@dimen/kinrecovery_btn_width"
        android:layout_height="@dimen/kinrecovery_btn_frame_height"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:background="@drawable/kinrecovery_btn_rounded_blue_solid"
        android:enabled="false"
...
