...
        android:text="@string/backup_and_restore_backup_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keep_safe_title"/>

    <Button
        android:id="@+id/lets_go_button"
        style="@style/BackupAndRestoreButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/backupAndRestore_btn_height"
        android:layout_marginBottom="@dimen/backupAndRestore_btn_margin_bottom"
        android:text="@string/backup_and_restore_lets_go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/backup_and_restore_btn_purple_blue"/>

</android.support.constraint.ConstraintLayout>
