...
        android:textColor="@color/backupAndRestore_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_image"/>

    <CheckBox
        android:id="@+id/i_saved_my_qr_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHighlight="@color/backupAndRestore_purple_blue"
        android:theme="@style/BackupAndRestoreCheckBox"
        android:visibility="gone"
        android:layout_marginBottom="25dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/i_saved_my_qr_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/send_email_button"/>

    <TextView
        android:id="@+id/i_saved_my_qr_text"
        style="@style/BackupAndRestoreTitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
