...
    <string name="backup_and_restore_restore">Restore</string>
    <string name="backup_and_restore_backup">Backup</string>

    <string name="backup_and_restore_steps_format">%d/%d</string>

    <!--Sentences-->
    <string name="backup_and_restore_upload_qr_title">Load your Kin from a backup</string>
    <string name="backup_and_restore_upload_qr_description">First, upload the QR code you saved\n
        (Hint: Check your email to find it) </string>
    <string name="backup_and_restore_upload_qr_btn">Upload QR code</string>
    <string name="backup_and_restore_restore_consent_title">Are you sure you want to restore your previous balance?</string>
    <string name="backup_and_restore_consent_message">Restoring your old balance will replace your current Kin balance.</string>
    <string name="backup_and_restore_password_recovery_content">Now, enter your password</string>
    <string name="backup_and_restore_done">Done</string>
    <string name="backup_and_restore_all_set">All set!\n
Your Kin balance is updated</string>
    <string name="backup_and_restore_restore_completed_title">Your Kin balance is updated</string>
    <string name="backup_and_restore_enter_password">Enter password</string>
    <string name="backup_and_restore_try_again">Try Again</string>
    <string name="backup_and_restore_cancel">Cancel</string>

    <!--Errors-->
    <string name="backup_and_restore_loading_file_error">Error Loading QR File</string>
    <string name="backup_and_restore_error_decoding_QR">Error Processing QR File</string>
...
