...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kinrecovery_password_qr_icon" />


    <kin.backupandrestore.widget.PasswordEditText
        android:id="@+id/kinrecovery_password_edit"
        android:layout_width="0dp"
        android:layout_height="@dimen/backup_and_restore_edittext_height"
        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
        app:backup_and_restore_hint="@string/backup_and_restore_enter_password"
        app:backup_and_restore_show_reveal_icon="true"
        app:layout_constraintTop_toBottomOf="@id/kinrecovery_password_recovery_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/kinrecovery_password_done_btn"
        style="@style/BackupAndRestoreButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/backup_and_restore_btn_height"
        android:layout_marginBottom="@dimen/backup_and_restore_btn_margin_bottom"
        android:background="@drawable/backup_and_restore_btn_state_list"
        android:text="@string/backup_and_restore_done"
...
