...
    android:orientation="vertical"
    android:weightSum="1">

    <include layout="@layout/backup_and_restore_toolbar_layout" />

    <FrameLayout
        android:id="@+id/fragment_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>

